[FEAT] Display and serach by criteria